2001-04-09  Akim Demaille  <akim@epita.fr>

	* automake.in (&handle_compile): Extract from...
	(&get_object_extension): here.
	(&read_am_file): Call it.
	($included_generic_compile, $included_knr_compile)
	($included_libtool_compile): Remove.
	($get_object_extension_was_run): New.

2001-04-09  Akim Demaille  <akim@epita.fr>

	Use AM_CONDITIONAL and if/endif for AMDEP.

	* m4/depend.m4 (AM_DEP_TRACK): Use AM_CONDITIONAL to define AMDEP.
	* automake.in (&add_depend2): Transform %AMDEP% into `AMDEP' (leading
	to a configure time if/endif), or to `FALSE' (static removal of
	the code).
	(&handle_dependencies): Adjust to use `AMDEP_TRUE'.
	* depend2.am: Use if/endif.

	Adjust the 101 tests that use dependencies so that they
	properly invoke aclocal before automake.  They need to `see'
	`AM_CONDITIONAL([AMDEP], ...)'.

2001-04-09  Akim Demaille  <akim@epita.fr>

	* tags.am: Fix missing leading tabs.

2001-04-09  Akim Demaille  <akim@epita.fr>

	* automake.in: Use simple quotes to define the _PATTERN variables
	to unobfuscate the regexps.
	($AM_CONDITIONAL_PATTERN): Let the user quote the variable.

	
2001-04-09  Akim Demaille  <akim@epita.fr>

	* automake.in (&rule_define): When you discover a suffix rules,
	register the extensions for .SUFFIXES.
	(&handle_texinfo): Don't register the suffixes.
	(&get_object_extension): Don't register suffixes, let them be
	discovered in depend2.am.
	(&handle_emacs_lisp): Depend on your lisp.am.
	* lisp.am: Include the rule &handle_emacs_lisp used to output.

2001-04-09  Akim Demaille  <akim@epita.fr>

	* subdirs.am: Don't define info related recursive targets.
	* texinfos.am: Do.

2001-04-09  Akim Demaille  <akim@epita.fr>

	* subdirs.am (RECURSIVE_TARGETS): New variable.
	Use it.
	* automake.in (&handle_subdirs): Output it.
	(&file_contents_internal): Support value spread on several lines.

2001-04-09  Akim Demaille  <akim@epita.fr>

	* automake.in (&handle_man_pages): Rely on mans.am to define
	man%SECTION%dir and MANS.