@@ -1,0 +1,33 @@
+## automake - create Makefile.in from Makefile.am
+## Copyright 2001 Free Software Foundation, Inc.
+
+## This program is free software; you can redistribute it and/or modify
+## it under the terms of the GNU General Public License as published by
+## the Free Software Foundation; either version 2, or (at your option)
+## any later version.
+
+## This program is distributed in the hope that it will be useful,
+## but WITHOUT ANY WARRANTY; without even the implied warranty of
+## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+## GNU General Public License for more details.
+
+## You should have received a copy of the GNU General Public License
+## along with this program; if not, write to the Free Software
+## Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
+## 02111-1307, USA.
+
+## OUTARG is set to `', or `-c', or `-c -o $@' etc.
+## LTOUTARG is set to `', or `-o $@'.
+
+.%EXT%.o:
+	$(%COMPILER%) %OUTARG% $<
+
+.%EXT%.obj:
+## FIXME: Using cygpath should be somehow conditional.
+	$(%COMPILER%) %OUTARG% `cygpath -w $<`
+
+if %?LIBTOOL%
+.%EXT%.lo:
+## We don't care if there are several `-o', libtool handles it gracefully.
+	$(LT%COMPILER%) %OUTARG% %LTOUTARG% $<
+endif %?LIBTOOL%
