@@ -1,5 +1,14 @@
 2001-04-09  Akim Demaille  <akim@epita.fr>
 
+	* ext-compile.am: New file.
+	* automake.in (&finish_languages): Output it.
+	Require a C linker if there are several registered source suffixes.
+	(&handle_compile): No longer push the `.c', `.o', `.obj', `.lo'
+	extensions, which are discovered in ext-compile.am.
+	With the help from Robert Boehne.
+
+2001-04-09  Akim Demaille  <akim@epita.fr>
+
 	* automake.in (&handle_compile): Extract from...
 	(&get_object_extension): here.
 	(&read_am_file): Call it.
